<resources>
    <string name="app_name">kotlin6semestr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnDescripSearch">Изображение кнопки поиск</string>
    <string name="btnDescripCalendar">Изображение кнопки календарь</string>
    <string name="btnDescripHome">Изображение кнопки Дом</string>
    <string name="BtnRegistrationText">Зарегистрироваться</string>
    <string name="EditTextEnterPassword">Введите ваш пароль</string>
    <string name="TxtPassword">Пароль</string>
    <string name="EditTxt_EnterEmail">Введите вашу электронную почту</string>
    <string name="EmailOnRus">Почта</string>
    <string name="RegistrationToRus">Регистрация</string>
    <string name="Enter">Вход</string>
    <string name="Autorization">Авторизация</string>
    <string name="Opisanije_zadachi">Описание задачи</string>
    <string name="Nazvanije_zadachi">Название задачи</string>
    <string name="btn">Button</string>
    <string name="back">Назад</string>
    <string name="search">Поиск</string>
    <string name="enter_text_to_find">Введите текст для поиска</string>
    <string name="clear">Очистить</string>
    <string name="find">Найти</string>
    <string name="Homs">Изображение кнопки Дом</string>
    <string name="loops">Изображение кнопки календарь</string>
    <string name="serchs">Изображение кнопки поиск</string>
</resources>