<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <!-- Фрейм для отображения содержимого -->
    <FrameLayout
        android:id="@+id/frameLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomPanel" >

        <ListView
            android:id="@+id/listViewTasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/zero"
            android:visibility="visible" />
    </FrameLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottomPanel"
        android:background="@android:color/darker_gray" />

    <!-- Панель с кнопками -->
    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="@dimen/zero"
        android:paddingBottom="@dimen/zero">

        <!-- Кнопка "Дом" -->
        <Button
            android:id="@+id/buttonHome"
            android:text=""
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/home4"
            android:drawablePadding="@dimen/margin_small"

            android:contentDescription="@string/btnDescripHome"/>

        <!-- Кнопка "Календарь" -->
        <Button
            android:id="@+id/buttonCalendar"
            android:text=""
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/calendar2"
            android:drawablePadding="15dp"

            android:contentDescription="@string/btnDescripCalendar"/>

        <!-- Кнопка "Поиск" -->
        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="@dimen/zero"
            android:text=""
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/loop1"
            android:drawablePadding="@dimen/margin_small"

            android:contentDescription="@string/btnDescripSearch"/>
    </LinearLayout>
</RelativeLayout>
